# VellumStyle

./: .gitignore  LICENSE  README.md  config.yaml  gen-icon.cjs  index.html  package-lock.json  package.json  release-notes.md  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
docs/: PROGRESS.md  release-template.md
docs/learn/: 代码阅读指南.md  同步滚动代码解析.md
scripts/: crawl_mdnice_themes.py  generate-hljs-themes.mjs  generate-logo-assets.py  npm-argument-probe.test.mjs  run-tests.mjs  run-tests.test.mjs
src/: App.tsx  App.workspaceLayout.test.ts  articleRoot.ts  content.md  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  documents.rs  export_file.rs  external.rs  import.rs  lib.rs  main.rs  preview_image.rs  sync.rs  themes.rs  wechat.rs
src/appearance/: appearanceMode.test.ts  appearanceMode.ts
src/markdown/: codeFallback.ts  codeThemes.test.ts  codeThemes.ts  converter.test.ts  converter.ts  data-line.ts  generatedHljsThemes.ts  imageMarkdown.test.ts  imageMarkdown.ts  mathjax.test.ts  mathjax.ts  mermaid.test.ts  mermaid.ts  mermaidExport.test.ts  mermaidExport.ts  parser.test.ts  parser.ts  sanitize.test.ts  sanitize.ts
src/store/: appearanceState.test.ts  index.ts  workspaceSplitState.test.ts
src/styles/: appearanceStyle.test.ts  globals.css  scrollbarStyle.test.ts  workspaceStyle.test.ts
src/test/: setupDom.ts
src/themes/: basic.ts  compileModel.test.ts  compileModel.ts  default.json  default.test.ts  index.ts  loader.ts  themeModel.test.ts  themeModel.ts
src/utils/: appUpdater.ts  autosave.test.ts  autosave.ts  clipboard.ts  cloudSync.test.ts  cloudSync.ts  cspNonce.test.ts  cspNonce.ts  documentThemes.test.ts  documentThemes.ts  documents.absolutePath.test.ts  documents.test.ts  documents.ts  exportArticle.test.ts  exportArticle.ts  imageProxy.test.ts  imageProxy.ts  markdownImport.test.ts  markdownImport.ts  markdownMediaScanner.test.ts  markdownMediaScanner.ts  outboundIpMonitor.test.ts  outboundIpMonitor.ts  outline.test.ts  (+15 more)
(+204 files in other folders)
