[package]
name = "wechat-md-editor"
version = "0.1.0"
description = "微信公众号排版工具"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "wechat_md_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["sync"] }
http = "1"
urlencoding = "2"
url = "2"
