[package]
name = "vellumstyle"
version = "1.4.4"
description = "文澜排版"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vellumstyle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "image-png"] }
tauri-plugin-dialog = "2"
webview2-com = "0.38.2"
windows = "0.61.3"
base64 = "0.22.1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["sync", "fs"] }
http = "1"
urlencoding = "2"
url = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
